# Evolution_of_Todo

./: .gitignore  CHATBOT_FEATURES.md  README.md  pyproject.toml  requirements.txt  test_app.py  test_functionality.py  todo_app.db
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  requirements.txt  simple_test.py  test_auth_task.py  test_chatbot.py  todo_app.db
backend/config/: openai_config.py
backend/core/agents/: chat_agent.py  tool_registry.py
backend/core/nlp/: intent_classifier.py
backend/core/services/: conversation_service.py
backend/core/tools/: task_tools.py
backend/src/: config.py  main.py
backend/src/api/: error_handlers.py
backend/tests/: test_agents.py  test_api_contracts.py  test_chat_api.py  test_integration.py  test_tools.py
backend/utils/: ai_client.py
docs/: api-reference.md
frontend/: Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/lib/: auth.ts  (+10 more)
migrations/: 001_create_chat_tables.sql
specs/1-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/auth-api-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cli/: main.py
src/models/: todo.py
src/services/: todo_service.py
tests/: conftest.py
tests/integration/: test_todo_operations.py
(+69 files in other folders)
