[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "Console-based Todo Application"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]